
    o  When 'traj.match' is called, the returned 'traj.matched.pomp' object has its 'states' slot filled with the model trajectory at the fitted parameters.

    o  More optimization methods are now provided in 'traj.match'.  These include the new algorithm "sannbox", an optionally box-constrained simulated annealing algorithm.

    o  There is a change to the interface to 'pfilter' in that 'save.states' results in the filling of the 'last.states' slot.  Before version 0.36-1, the 'pfilter' returned a list.  The element 'states' of that list corresponds to the slot 'last.states' in version 0.36-1.  It was necessary to make this name-change in order to avoid a conflict with the 'states' slot inherited from the 'pomp' class.

NEW IN VERSION 0.35-1:

    o  Added a facility for computation of "synthetic likelihood" (Wood 2010) using a robust estimate of the covariance.  A new slot in objects of class 'probed.pomp' holds this value.

    o  The synthetic likelihood is now the quantity that is maximized in 'probe.match'.

    o  Added the argument 'type' to 'probe.ccf' so that either cross-covariance or cross-correlation can be returned.  'probe.ccf' and 'probe.acf' now have comparable interfaces.

    o  Changed the way that 'probe.acf' accepts lags.  Now an arbitrary set of lags can be selected.

    o  A bug in the new method 'obs' has been fixed.

    o  A protection-stack overflow bug in 'probe' has been fixed.

    o  The 'seed' slot in 'probed.pomp' and 'spect.pomp' objects has been removed, along with unwanted behavior to do with it.

NEW IN VERSION 0.34-2:

    o  Added a method to coerce 'probed.pomp' objects to 'data.frame' objects.

    o  Fix bug when 'simulate' is run on objects that inherit from 'pomp' but are not themselves pomps.
       'simulate' should return 'pomp' objects when obs=F and states=F, regardless of what class 'object' is.

    o  'simulate' and 'rprocess' are accelerated somewhat through judicious use of 'memcpy'.
