@@ -32,23 +32,26 @@ importFrom(subplex,subplex)
 importFrom(deSolve,ode)
 
 exportClasses(
-              "pomp","pfilterd.pomp",
-              "mif","pmcmc",
-              "traj.matched.pomp",
-              "probed.pomp","probe.matched.pomp"
-              ,"spect.pomp","spect.matched.pomp"
+              pomp,
+              pfilterd.pomp,
+              mif,
+              pmcmc,
+              traj.matched.pomp,
+              probed.pomp,probe.matched.pomp,
+              spect.pomp,spect.matched.pomp
               )
 
 exportMethods(
-              'plot','show','print','coerce','summary','logLik','window',
-              'dprocess','rprocess','rmeasure','dmeasure','init.state','skeleton',
-              'data.array','obs','coef','time','time<-','timezero','timezero<-','$',
-              'simulate','pfilter',
-              'particles','mif','continue','coef<-','states','trajectory',
-              'pred.mean','pred.var','filter.mean','conv.rec',
-              'bsmc',
-              'pmcmc','dprior',
-              'spect','probe'
+              plot,show,print,coerce,summary,logLik,window,"$",
+              dprocess,rprocess,rmeasure,dmeasure,init.state,skeleton,
+              data.array,obs,coef,"coef<-",time,"time<-",timezero,"timezero<-",
+              simulate,pfilter,
+              particles,mif,continue,states,trajectory,
+              pred.mean,pred.var,filter.mean,conv.rec,
+              bsmc,
+              pmcmc,dprior,
+              spect,probe,
+              probe.match,traj.match
               )
 
 export(
@@ -69,9 +72,6 @@ export(
        periodic.bspline.basis,
        compare.mif,
        nlf,
-       skeleton,
-       trajectory,
-       traj.match,
        probe.mean,
        probe.median,
        probe.var,
@@ -82,6 +82,5 @@ export(
        probe.ccf,
        probe.nlar,
        probe.marginal,
-       probe.match,
        spect.match
        )
