@@ -6,9 +6,9 @@
 ##   cat("See the NEWS file for important information\n")
 ##}
 
-setGeneric("print")
-setGeneric("summary")
+setGeneric("print",function(x,...)standardGeneric("print"))
 setGeneric("plot",function(x,y,...)standardGeneric("plot"))
+setGeneric("summary",function(object,...)standardGeneric("summary"))
 setGeneric("simulate",function(object,nsim=1,seed=NULL,...)standardGeneric("simulate"))
 setGeneric("time",function(x,...)standardGeneric("time"))
 setGeneric("coef",function(object,...)standardGeneric("coef"))
